// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PairingModeHelp renders screen for Yeti renders screen for 6G yeti 1`] = `
<View
  style={
    {
      "backgroundColor": "rgba(27, 27, 27, 1)",
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "rgba(27, 27, 27, 1)",
          "borderBottomLeftRadius": 24,
          "borderBottomRightRadius": 24,
          "elevation": 12,
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 4,
            "width": 4,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 12,
          "zIndex": 1,
        },
        {
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "center",
          "marginHorizontal": 24,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={20}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "opacity": 1,
            },
            {
              "left": 0,
              "padding": 10,
              "position": "absolute",
            },
          ]
        }
      >
        <SvgMock />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "marginHorizontal": 48,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "RobotoCondensed-Medium",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 32,
            }
          }
        >
          Pairing Mode
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    style={
      {
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "backgroundColor": "rgba(27, 27, 27, 1)",
              "borderRadius": 16,
              "paddingHorizontal": 12,
              "paddingVertical": 15,
            },
            undefined,
            {
              "marginBottom": 8,
              "marginHorizontal": 1,
              "paddingVertical": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              }
            }
          >
            <SvgMock />
          </View>
          <View
            style={
              [
                {
                  "flex": 1,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                },
                undefined,
                {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginVertical": 4,
                  },
                  undefined,
                ]
              }
            >
              Set Device
            </Text>
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 12,
                    "fontWeight": "300",
                    "lineHeight": 16,
                    "marginBottom": 4,
                  },
                  undefined,
                ]
              }
            >
              Different devices have different pairing mode instructions.
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "borderColor": "rgba(54, 54, 54, 1)",
              "borderRadius": 8,
              "borderWidth": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 16,
              "position": "relative",
            },
            undefined,
          ]
        }
        testID="customDropdownPress"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              {
                "color": "rgba(255, 255, 255, 0.87)",
                "fontFamily": "Roboto-Medium",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
              }
            }
          >
            Yeti 6G
          </Text>
          <SvgMock />
        </View>
        <Text
          style={
            {
              "backgroundColor": "rgba(27, 27, 27, 1)",
              "color": "rgba(191, 210, 43, 1)",
              "fontFamily": "Roboto-Medium",
              "fontSize": 12,
              "fontWeight": "300",
              "left": 7,
              "lineHeight": 16,
              "paddingHorizontal": 7,
              "position": "absolute",
              "top": -9,
            }
          }
        >
          Product
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "rgba(27, 27, 27, 1)",
              "borderRadius": 16,
              "paddingHorizontal": 12,
              "paddingVertical": 15,
            },
            undefined,
            {
              "marginBottom": 8,
              "marginHorizontal": 1,
              "paddingVertical": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              }
            }
          >
            <SvgMock />
          </View>
          <View
            style={
              [
                {
                  "flex": 1,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                },
                undefined,
                {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginVertical": 4,
                  },
                  undefined,
                ]
              }
            >
              Set Yeti to Pairing Mode
            </Text>
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 12,
                    "fontWeight": "300",
                    "lineHeight": 16,
                    "marginBottom": 4,
                  },
                  undefined,
                ]
              }
            >
              If the Bluetooth/Wi-Fi icon is not active on the Yeti display, press the Pair button located on the back of the Yeti. (Shown in the diagram below.)
            </Text>
            <Text
              style={
                {
                  "color": "rgba(255, 255, 255, 0.7)",
                  "fontFamily": "Roboto-Medium",
                  "fontSize": 12,
                  "fontWeight": "300",
                  "lineHeight": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "rgba(255, 205, 29, 1)",
                  }
                }
              >
                Note:
              </Text>
               If you're using a VPN or proxy, please disable it during setup. Leaving it on may disrupt pairing.
            </Text>
          </View>
        </View>
      </View>
      <Image
        resizeMode="contain"
        source={0}
        style={
          {
            "height": 180,
            "width": 702,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "rgba(27, 27, 27, 1)",
              "borderRadius": 16,
              "paddingHorizontal": 12,
              "paddingVertical": 15,
            },
            undefined,
            {
              "marginBottom": 8,
              "marginHorizontal": 1,
              "paddingVertical": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "marginTop": 20,
                }
              }
            >
              <SvgMock
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              />
              <SvgMock />
            </View>
          </View>
          <View
            style={
              [
                {
                  "flex": 1,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                },
                undefined,
                {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 12,
                    "fontWeight": "300",
                    "lineHeight": 16,
                    "marginBottom": 4,
                  },
                  undefined,
                ]
              }
            >
              If the Bluetooth/Wi-Fi icon is not blinking on the Yeti display, press and hold the Pair button (on the back of the Yeti) for 3 seconds.
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "opacity": 1,
        },
        [
          {
            "elevation": 12,
            "shadowColor": "rgba(0, 0, 0, 1)",
            "shadowOffset": {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 12,
          },
          {
            "paddingBottom": 16,
            "paddingHorizontal": 24,
            "paddingTop": 8,
          },
        ],
      ]
    }
  >
    <View
      style={
        {
          "borderRadius": 24,
          "overflow": "hidden",
        }
      }
    >
      <RNSVGSvgView
        bbHeight="48"
        bbWidth="100%"
        focusable={false}
        height={48}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 48,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -13224394,
                  1,
                  1776411,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="grad"
              x1="0"
              x2="0"
              y1="0"
              y2="0.5"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              {
                "brushRef": "grad",
                "type": 1,
              }
            }
            height="48"
            propList={
              [
                "fill",
              ]
            }
            width="100%"
            x="0"
            y="0"
          />
          <View
            style={
              [
                {
                  "borderRadius": 24,
                  "marginHorizontal": 1,
                  "marginTop": 1,
                },
                {
                  "backgroundColor": "rgba(191, 210, 43, 1)",
                  "height": 46,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingVertical": 12,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontFamily": "Roboto-Medium",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "lineHeight": 20,
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "rgba(27, 27, 27, 1)",
                      },
                      undefined,
                    ]
                  }
                >
                  OK
                </Text>
              </View>
            </View>
          </View>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`PairingModeHelp renders screen for Yeti renders screen for fridge 1`] = `
<View
  style={
    {
      "backgroundColor": "rgba(27, 27, 27, 1)",
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "rgba(27, 27, 27, 1)",
          "borderBottomLeftRadius": 24,
          "borderBottomRightRadius": 24,
          "elevation": 12,
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 4,
            "width": 4,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 12,
          "zIndex": 1,
        },
        {
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "center",
          "marginHorizontal": 24,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={20}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "opacity": 1,
            },
            {
              "left": 0,
              "padding": 10,
              "position": "absolute",
            },
          ]
        }
      >
        <SvgMock />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "marginHorizontal": 48,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "RobotoCondensed-Medium",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 32,
            }
          }
        >
          Pairing Mode
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    style={
      {
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "backgroundColor": "rgba(27, 27, 27, 1)",
              "borderRadius": 16,
              "paddingHorizontal": 12,
              "paddingVertical": 15,
            },
            undefined,
            {
              "marginBottom": 8,
              "marginHorizontal": 1,
              "paddingVertical": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              }
            }
          >
            <SvgMock />
          </View>
          <View
            style={
              [
                {
                  "flex": 1,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                },
                undefined,
                {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginVertical": 4,
                  },
                  undefined,
                ]
              }
            >
              Set Device
            </Text>
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 12,
                    "fontWeight": "300",
                    "lineHeight": 16,
                    "marginBottom": 4,
                  },
                  undefined,
                ]
              }
            >
              Different devices have different pairing mode instructions.
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "borderColor": "rgba(54, 54, 54, 1)",
              "borderRadius": 8,
              "borderWidth": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 16,
              "position": "relative",
            },
            undefined,
          ]
        }
        testID="customDropdownPress"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              {
                "color": "rgba(255, 255, 255, 0.87)",
                "fontFamily": "Roboto-Medium",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
              }
            }
          >
            Yeti 6G
          </Text>
          <SvgMock />
        </View>
        <Text
          style={
            {
              "backgroundColor": "rgba(27, 27, 27, 1)",
              "color": "rgba(191, 210, 43, 1)",
              "fontFamily": "Roboto-Medium",
              "fontSize": 12,
              "fontWeight": "300",
              "left": 7,
              "lineHeight": 16,
              "paddingHorizontal": 7,
              "position": "absolute",
              "top": -9,
            }
          }
        >
          Product
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "rgba(27, 27, 27, 1)",
              "borderRadius": 16,
              "paddingHorizontal": 12,
              "paddingVertical": 15,
            },
            undefined,
            {
              "marginBottom": 8,
              "marginHorizontal": 1,
              "paddingVertical": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              }
            }
          >
            <SvgMock />
          </View>
          <View
            style={
              [
                {
                  "flex": 1,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                },
                undefined,
                {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginVertical": 4,
                  },
                  undefined,
                ]
              }
            >
              Set Alta to Pairing Mode
            </Text>
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 12,
                    "fontWeight": "300",
                    "lineHeight": 16,
                    "marginBottom": 4,
                  },
                  undefined,
                ]
              }
            >
              If the Bluetooth/Wi-Fi icon is not active on the LCD screen (located on the front of the Alta), press the Bluetooth button found on the front. (Shown in the diagram below.)
            </Text>
          </View>
        </View>
      </View>
      <Image
        resizeMode="contain"
        source={0}
        style={
          {
            "height": 180,
            "width": 702,
          }
        }
      />
    </View>
  </RCTScrollView>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "opacity": 1,
        },
        [
          {
            "elevation": 12,
            "shadowColor": "rgba(0, 0, 0, 1)",
            "shadowOffset": {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 12,
          },
          {
            "paddingBottom": 16,
            "paddingHorizontal": 24,
            "paddingTop": 8,
          },
        ],
      ]
    }
  >
    <View
      style={
        {
          "borderRadius": 24,
          "overflow": "hidden",
        }
      }
    >
      <RNSVGSvgView
        bbHeight="48"
        bbWidth="100%"
        focusable={false}
        height={48}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 48,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -13224394,
                  1,
                  1776411,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="grad"
              x1="0"
              x2="0"
              y1="0"
              y2="0.5"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              {
                "brushRef": "grad",
                "type": 1,
              }
            }
            height="48"
            propList={
              [
                "fill",
              ]
            }
            width="100%"
            x="0"
            y="0"
          />
          <View
            style={
              [
                {
                  "borderRadius": 24,
                  "marginHorizontal": 1,
                  "marginTop": 1,
                },
                {
                  "backgroundColor": "rgba(191, 210, 43, 1)",
                  "height": 46,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingVertical": 12,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontFamily": "Roboto-Medium",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "lineHeight": 20,
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "rgba(27, 27, 27, 1)",
                      },
                      undefined,
                    ]
                  }
                >
                  OK
                </Text>
              </View>
            </View>
          </View>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;

exports[`PairingModeHelp renders screen for Yeti renders screen for legacy yeti 1`] = `
<View
  style={
    {
      "backgroundColor": "rgba(27, 27, 27, 1)",
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "rgba(27, 27, 27, 1)",
          "borderBottomLeftRadius": 24,
          "borderBottomRightRadius": 24,
          "elevation": 12,
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 4,
            "width": 4,
          },
          "shadowOpacity": 0.2,
          "shadowRadius": 12,
          "zIndex": 1,
        },
        {
          "paddingTop": 0,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 60,
          "justifyContent": "center",
          "marginHorizontal": 24,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={20}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "opacity": 1,
            },
            {
              "left": 0,
              "padding": 10,
              "position": "absolute",
            },
          ]
        }
      >
        <SvgMock />
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "marginHorizontal": 48,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            {
              "color": "rgba(255, 255, 255, 1)",
              "fontFamily": "RobotoCondensed-Medium",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 32,
            }
          }
        >
          Pairing Mode
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView
    style={
      {
        "paddingHorizontal": 24,
        "paddingVertical": 16,
      }
    }
  >
    <View>
      <View
        style={
          [
            {
              "backgroundColor": "rgba(27, 27, 27, 1)",
              "borderRadius": 16,
              "paddingHorizontal": 12,
              "paddingVertical": 15,
            },
            undefined,
            {
              "marginBottom": 8,
              "marginHorizontal": 1,
              "paddingVertical": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              }
            }
          >
            <SvgMock />
          </View>
          <View
            style={
              [
                {
                  "flex": 1,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                },
                undefined,
                {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginVertical": 4,
                  },
                  undefined,
                ]
              }
            >
              Set Device
            </Text>
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 12,
                    "fontWeight": "300",
                    "lineHeight": 16,
                    "marginBottom": 4,
                  },
                  undefined,
                ]
              }
            >
              Different devices have different pairing mode instructions.
            </Text>
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "borderColor": "rgba(54, 54, 54, 1)",
              "borderRadius": 8,
              "borderWidth": 1,
              "paddingHorizontal": 12,
              "paddingVertical": 16,
              "position": "relative",
            },
            undefined,
          ]
        }
        testID="customDropdownPress"
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
            }
          }
        >
          <Text
            style={
              {
                "color": "rgba(255, 255, 255, 0.87)",
                "fontFamily": "Roboto-Medium",
                "fontSize": 14,
                "fontWeight": "400",
                "lineHeight": 20,
              }
            }
          >
            Yeti 6G
          </Text>
          <SvgMock />
        </View>
        <Text
          style={
            {
              "backgroundColor": "rgba(27, 27, 27, 1)",
              "color": "rgba(191, 210, 43, 1)",
              "fontFamily": "Roboto-Medium",
              "fontSize": 12,
              "fontWeight": "300",
              "left": 7,
              "lineHeight": 16,
              "paddingHorizontal": 7,
              "position": "absolute",
              "top": -9,
            }
          }
        >
          Product
        </Text>
      </View>
      <View
        style={
          [
            {
              "backgroundColor": "rgba(27, 27, 27, 1)",
              "borderRadius": 16,
              "paddingHorizontal": 12,
              "paddingVertical": 15,
            },
            undefined,
            {
              "marginBottom": 8,
              "marginHorizontal": 1,
              "paddingVertical": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              }
            }
          >
            <SvgMock />
          </View>
          <View
            style={
              [
                {
                  "flex": 1,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                },
                undefined,
                {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "lineHeight": 24,
                    "marginVertical": 4,
                  },
                  undefined,
                ]
              }
            >
              Set Yeti to Pairing Mode
            </Text>
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 12,
                    "fontWeight": "300",
                    "lineHeight": 16,
                    "marginBottom": 4,
                  },
                  undefined,
                ]
              }
            >
              If the Bluetooth/Wi-Fi icon is not active on the LCD screen (located on the front of the Yeti), press the Wireless button found under the lid. (Shown in the diagram below.)
            </Text>
            <Text
              style={
                {
                  "color": "rgba(255, 255, 255, 0.7)",
                  "fontFamily": "Roboto-Medium",
                  "fontSize": 12,
                  "fontWeight": "300",
                  "lineHeight": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "rgba(255, 205, 29, 1)",
                  }
                }
              >
                Note:
              </Text>
               If you're using a VPN or proxy, please disable it during setup. Leaving it on may disrupt pairing.
            </Text>
          </View>
        </View>
      </View>
      <Image
        resizeMode="contain"
        source={0}
        style={
          {
            "height": 180,
            "width": 702,
          }
        }
      />
      <View
        style={
          [
            {
              "backgroundColor": "rgba(27, 27, 27, 1)",
              "borderRadius": 16,
              "paddingHorizontal": 12,
              "paddingVertical": 15,
            },
            undefined,
            {
              "marginBottom": 8,
              "marginHorizontal": 1,
              "paddingVertical": 16,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flexDirection": "row",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 32,
                "justifyContent": "center",
                "width": 32,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "marginTop": 20,
                }
              }
            >
              <SvgMock
                style={
                  {
                    "marginBottom": 8,
                  }
                }
              />
              <SvgMock />
            </View>
          </View>
          <View
            style={
              [
                {
                  "flex": 1,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                },
                undefined,
                {
                  "paddingRight": 0,
                },
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "color": "rgba(255, 255, 255, 0.87)",
                    "fontFamily": "Roboto-Medium",
                    "fontSize": 12,
                    "fontWeight": "300",
                    "lineHeight": 16,
                    "marginBottom": 4,
                  },
                  undefined,
                ]
              }
            >
              If the Bluetooth/Wi-Fi icon is not blinking as shown here (to the left), press and hold the Wireless button (under the lid) on the Yeti for 4 seconds.
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "opacity": 1,
        },
        [
          {
            "elevation": 12,
            "shadowColor": "rgba(0, 0, 0, 1)",
            "shadowOffset": {
              "height": 4,
              "width": 4,
            },
            "shadowOpacity": 0.2,
            "shadowRadius": 12,
          },
          {
            "paddingBottom": 16,
            "paddingHorizontal": 24,
            "paddingTop": 8,
          },
        ],
      ]
    }
  >
    <View
      style={
        {
          "borderRadius": 24,
          "overflow": "hidden",
        }
      }
    >
      <RNSVGSvgView
        bbHeight="48"
        bbWidth="100%"
        focusable={false}
        height={48}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 48,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup
          fill={
            {
              "payload": 4278190080,
              "type": 0,
            }
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                [
                  0,
                  -13224394,
                  1,
                  1776411,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="grad"
              x1="0"
              x2="0"
              y1="0"
              y2="0.5"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              {
                "brushRef": "grad",
                "type": 1,
              }
            }
            height="48"
            propList={
              [
                "fill",
              ]
            }
            width="100%"
            x="0"
            y="0"
          />
          <View
            style={
              [
                {
                  "borderRadius": 24,
                  "marginHorizontal": 1,
                  "marginTop": 1,
                },
                {
                  "backgroundColor": "rgba(191, 210, 43, 1)",
                  "height": 46,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "paddingVertical": 12,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontFamily": "Roboto-Medium",
                        "fontSize": 14,
                        "fontWeight": "700",
                        "lineHeight": 20,
                        "textTransform": "uppercase",
                      },
                      {
                        "color": "rgba(27, 27, 27, 1)",
                      },
                      undefined,
                    ]
                  }
                >
                  OK
                </Text>
              </View>
            </View>
          </View>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
